--- a/quartz/components/styles/listPage.scss
+++ b/quartz/components/styles/listPage.scss
@@ -14,8 +14,15 @@ li.section-li {
     grid-template-columns: fit-content(8em) 3fr 1fr;
 
     @media all and ($mobile) {
+      grid-template-columns: 1fr;
+      row-gap: 0.25em;
+
       & > .tags {
         display: none;
+      }
+
+      & .meta {
+        font-size: 0.85em;
       }
     }
 
