--- a/quartz/components/styles/mermaid.inline.scss
+++ b/quartz/components/styles/mermaid.inline.scss
@@ -1,3 +1,5 @@
+@use "../../styles/variables.scss" as *;
+
 .expand-button {
   position: absolute;
   display: flex;
@@ -25,6 +27,11 @@
 
   &:focus {
     outline: 0;
+  }
+
+  @media all and ($mobile) {
+    opacity: 0.5;
+    padding: 0.6rem;
   }
 }
 
@@ -64,6 +71,11 @@ pre {
     width: 80vw;
     overflow: hidden;
 
+    @media all and ($mobile) {
+      width: 95vw;
+      height: 70vh;
+    }
+
     & > .mermaid-content {
       position: relative;
       transform-origin: 0 0;
@@ -96,6 +108,13 @@ pre {
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       z-index: 2;
 
+      @media all and ($mobile) {
+        bottom: 12px;
+        right: 12px;
+        left: 12px;
+        justify-content: center;
+      }
+
       .mermaid-control-button {
         display: flex;
         align-items: center;
@@ -125,6 +144,12 @@ pre {
           width: auto;
           padding: 0 12px;
           font-size: 14px;
+        }
+
+        @media all and ($mobile) {
+          width: 44px;
+          height: 44px;
+          font-size: 18px;
         }
       }
     }
