--- a/quartz/components/styles/toc.scss
+++ b/quartz/components/styles/toc.scss
@@ -20,6 +20,7 @@ button.toc-header {
   color: var(--dark);
   display: flex;
   align-items: center;
+  min-height: 44px;
 
   & h3 {
     font-size: 1rem;
